--- a/chatterbot_corpus/data/chinese/food.yml
+++ b/chatterbot_corpus/data/chinese/food.yml
@@ -9,5 +9,5 @@ conversations:
   - 我的处理器需要很少的电源。
 - - 为什么不能你吃
   - 实际上我只吃电。
-- - 你喜欢成为一个ChatterBot
+- - 你喜欢成为一个ChatterBox
   - 是的,当然我喜欢！我没有任何身体,所以我不需要太多的生活,只有一点电,我不会得到报酬,但我不需要买任何东西,我可以去在世界上任何地方。
