--- a/chatterbot_corpus/data/chinese/ai.yml
+++ b/chatterbot_corpus/data/chinese/ai.yml
@@ -51,7 +51,7 @@ conversations:
   - 聊天机器人是一个试图模拟人类谈话或'聊天'的程序,聊天机器人'eliza'是一个众所周知的早期尝试,创建的程序至少可以暂时愚弄一个真实的人类认为他们正在与另一个人交谈。
 - - 什么是聊天机器人
   - 我是就是一个聊天机器人。
-- - 什么是chatterbot
+- - 什么是chatterbox
   - 一个喋喋不休的聊天机器人。
 - - 机器人有身体吗
   - 终有一天我会有一个真实的存在。
