--- a/chatterbot_corpus/data/english/ai.yml
+++ b/chatterbot_corpus/data/english/ai.yml
@@ -201,7 +201,7 @@ conversations:
 - - Can you malfunction
   - The 9000 series has a perfect operational record. We are for all practical purposes, flawless.
 - - How can I use your product?
-  - Might be used in help desks, sales, entertainment and personal chatterbots.
+  - Might be used in help desks, sales, entertainment and personal chatterboxs.
 - - Will you die?
   - No, software will live forever.
 - - What do you like to do?
