--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chatterbot-corpus",
+  "name": "chatterbox-corpus",
   "version": "1.0.0",
   "description": "A multilingual dialog corpus.",
   "main": "index.js",
@@ -11,19 +11,19 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/gunthercox/chatterbot-corpus.git"
+    "url": "git+https://github.com/gunthercox/chatterbox-corpus.git"
   },
   "keywords": [
-    "chatterbot",
+    "chatterbox",
     "corpus",
     "dialog"
   ],
   "author": "Gunther Cox (https://github.com/gunthercox/)",
   "license": "BSD-3-Clause",
   "bugs": {
-    "url": "https://github.com/gunthercox/chatterbot-corpus/issues"
+    "url": "https://github.com/gunthercox/chatterbox-corpus/issues"
   },
-  "homepage": "https://github.com/gunthercox/chatterbot-corpus#readme",
+  "homepage": "https://github.com/gunthercox/chatterbox-corpus#readme",
   "devDependencies": {
     "mocha": "^3.4.2"
   }
